--- a/client/style.css
+++ b/client/style.css
@@ -29,21 +29,22 @@ body{
   width: 100%;
   float: left;
   display: block;
+  margin-bottom: 10px;
 }
 
 #luketext{
 
-
+    width: 300px;
     background-color: white;
 }
 
 #hantext{
-
+    width: 300px;
     background-color: white;
 }
 
 #leilatext{
-
+   width: 300px;
     background-color: white;
 }
 
@@ -123,7 +124,7 @@ margin-bottom: 10px;
 }
 
 .post-container {
-  background-color: lightblue; 
+  background-color: lightblue;
   width: 75%;
   margin-top: 20px;
 }
