--- a/client/style.css
+++ b/client/style.css
@@ -56,7 +56,7 @@ body{
     background-color: white;
 }
 
-#hantexput{
+#hantextput{
     width: 300px;
     background-color: white;
     margin-left: 305px;
